force-app/main/default/objects/ComplianceViolationRecord__c/ComplianceViolationRecord__c.object-meta.xml
<CustomObject>
    <label>ComplianceViolationRecord</label>
    <nameField>
        <label>ComplianceViolationRecord Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ComplianceViolationRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>