force-app/main/default/objects/ComplianceViolationRecord__c/fields/AuditTrail__c.field-meta.xml
<CustomField>
    <fullName>AuditTrail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AuditTrail</label>
    <referenceTo>AuditTrail__c</referenceTo>
    <relationshipLabel>ComplianceViolationRecords</relationshipLabel>
    <relationshipName>ComplianceViolationRecords</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>