force-app/main/default/objects/ComplianceViolationRecord__c/fields/RegulationType__c.field-meta.xml
<CustomField>
    <fullName>RegulationType__c</fullName>
    <label>RegulationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>SOX</fullName>
            </value>
            <value>
                <fullName>CCPA</fullName>
            </value>
            <value>
                <fullName>PIPEDA</fullName>
            </value>
            <value>
                <fullName>LGPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>