force-app/main/default/objects/ComplianceViolationRecord__c/fields/ViolationType__c.field-meta.xml
<CustomField>
    <fullName>ViolationType__c</fullName>
    <label>ViolationType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>